[package]
name = "sql"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.0.0", features = ["bundled"] }
proptest = "1.0.0"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
uuid = {version = "1.10", features = ["v4"]}

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "run_loop"
harness = false
